[package]
authors = ["The Fe Developers <snakecharmers@ethereum.org>"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools"]
description = "An implementation of the Fe smart contract language"
edition = "2018"
keywords = ["ethereum", "fe", "yul", "smart", "contract", "compiler"]
license = "GPL-3.0-or-later"
name = "fejs"
readme = "README.md"
repository = "https://github.com/ethereum/fe"
version = "0.6.1-alpha"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]#,"rlib"]

# [dependencies.neon]
# version = "0.8.3"
# default-features = false
# features = ["napi-6"]
[features]
solc-backend = ["fe-driver/solc-backend"]

[dependencies]
nodejs-sys = "*"
clap = "2.33.3"
neon = "0.4.0"
# neon-serde = "0.4.0"
# serde_json = "1.0"
serde = "1.0"
neon-serde = "0.4.0"
serde_json = "1.0"
serde_derive = "1.0.80"
fe-common = {path = "../fe/crates/common", version = "^0.6.1-alpha"}
fe-driver = {path = "../fe/crates/driver", version = "^0.6.1-alpha"}
fe-parser = {path = "../fe/crates/parser", version = "^0.6.1-alpha"}
fe-analyzer = {path = "../fe/crates/analyzer", version = "^0.6.1-alpha"}
fe-lowering = {path = "../fe/crates/lowering"}

